--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "concurrently --kill-others \"npm run build:watch\" \"npm run storybook\"",
     "build": "gulp",
     "build:watch": "gulp watch",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "SET NODE_OPTIONS=--openssl-legacy-provider && start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "repository": {
