--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "concurrently --kill-others \"npm run build:watch\" \"npm run storybook\"",
     "build": "gulp",
     "build:watch": "gulp watch",
-    "storybook": "SET NODE_OPTIONS=--openssl-legacy-provider && start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "storybook dev",
+    "build-storybook": "storybook build"
   },
   "repository": {
     "type": "git",
@@ -27,33 +27,32 @@
   },
   "homepage": "https://github.com/KhaosArbiter/modern-react-qr-reader#readme",
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.11",
-    "@storybook/addon-links": "^3.4.11",
-    "@storybook/addons": "^3.4.11",
-    "@storybook/react": "^3.4.11",
-    "babel-cli": "^6.8.0",
+    "@chromatic-com/storybook": "^1.6.1",
+    "@storybook/addon-actions": "^8.2.6",
+    "@storybook/addon-links": "^8.2.6",
+    "@storybook/react": "^8.2.6",
+    "@storybook/react-vite": "^8.2.6",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "concurrently": "^3.6.1",
-    "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.3",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "del": "^7.1.0",
+    "gulp": "^5.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-inline-str": "^0.1.0",
-    "gulp-uglify": "^2.0.0",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3"
-  },
-  "peerDependencies": {
-    "react": "~16",
-    "react-dom": "~16"
+    "gulp-uglify": "^3.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "dependencies": {
-    "jsqr": "^1.2.0",
-    "prop-types": "^15.7.2",
-    "webrtc-adapter": "^7.2.1"
+    "@storybook/preview-api": "^8.2.6",
+    "jsqr": "^1.4.0",
+    "prop-types": "^15.8.1",
+    "webrtc-adapter": "^9.0.1"
   }
 }
