--- a/package.json
+++ b/package.json
@@ -27,9 +27,13 @@
   },
   "homepage": "https://github.com/KhaosArbiter/modern-react-qr-reader#readme",
   "devDependencies": {
+    "@babel/preset-react": "^7.24.7",
     "@chromatic-com/storybook": "^1.6.1",
     "@storybook/addon-actions": "^8.2.6",
+    "@storybook/addon-essentials": "^8.2.6",
     "@storybook/addon-links": "^8.2.6",
+    "@storybook/builder-vite": "^8.2.6",
+    "@storybook/preview-api": "^8.2.6",
     "@storybook/react": "^8.2.6",
     "@storybook/react-vite": "^8.2.6",
     "babel-cli": "^6.26.0",
@@ -50,7 +54,6 @@
     "react-dom": "^18.3.1"
   },
   "dependencies": {
-    "@storybook/preview-api": "^8.2.6",
     "jsqr": "^1.4.0",
     "prop-types": "^15.8.1",
     "webrtc-adapter": "^9.0.1"
